--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-  "name": "antony-portfolio",
+{"homepage": "http://Antony-Q.github.io/react-dont-respond",
+    "name": "antony-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,6 +41,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.8.0",
     "@testing-library/react": "^9.5.0",
-    "gh-pages": "^3.0.0"
+    "gh-pages": "^3.2.3"
   }
 }
