added deploy dependencies

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "http://Antony-Q.github.io/react-dont-respond",
+{"homepage": "http://Antony-Q.github.io/react_dont_respond",
     "name": "antony-portfolio",
   "version": "0.1.0",
   "private": true,
